--- a/app/emails/join-propcott.html
+++ b/app/emails/join-propcott.html
@@ -10,7 +10,7 @@
 
 <h2 style="font-family: 'Century Gothic',CenturyGothic,AppleGothic,sans-serif; font-size: 18pt; margin: 0; line-height: 1.1; font-weight: normal; margin-top: 2em; margin-bottom: 0.5em; color:#444;">Hello {{ user.display_name || user.name }}!</h2>
 
-<p style="line-height: 1.8; color:#444; margin-top: 1em; margin-bottom: 1em;">Thanks for joining {{ propcott.title }}. This is a friendly reminder of a few things to remember:</p>
+<p style="line-height: 1.8; color:#444; margin-top: 1em; margin-bottom: 1em;">Thanks for joining <a href="http://www.propcott.com/p/{{ propcott.slug }}">{{ propcott.title }}</a>. This is a friendly reminder of a few things to remember:</p>
 
 <h3 style="font-family: 'Century Gothic',CenturyGothic,AppleGothic,sans-serif; font-size: 14pt; margin: 0; line-height: 1.1; margin-top: 2em; margin-bottom: 0.5em; color:#444;">The target</h3>
 <p style="line-height: 1.8; color:#444; margin-top: 1em; margin-bottom: 1em;">{{ propcott.target }}</p>
