--- a/app/emails/publish-propcott.html
+++ b/app/emails/publish-propcott.html
@@ -10,7 +10,7 @@
 
 <h2 style="font-family: 'Century Gothic',CenturyGothic,AppleGothic,sans-serif; font-size: 18pt; margin: 0; line-height: 1.1; font-weight: normal; margin-top: 2em; margin-bottom: 0.5em; color:#444;">Hello {{ user.display_name || user.name }}!</h2>
 
-<p style="line-height: 1.8; color:#444; margin-top: 1em; margin-bottom: 1em;">You have just published {{ propcott.title }}. Here are a few tips to keep in mind:</p>
+<p style="line-height: 1.8; color:#444; margin-top: 1em; margin-bottom: 1em;">You have just published <a href="http://www.propcott.com/p/{{ propcott.slug }}">{{ propcott.title }}</a>. Here are a few tips to keep in mind:</p>
 
 <h3 style="font-family: 'Century Gothic',CenturyGothic,AppleGothic,sans-serif; font-size: 14pt; margin: 0; line-height: 1.1; margin-top: 2em; margin-bottom: 0.5em; color:#444;">Set and simplify</h3>
 <p style="line-height: 1.8; color:#444; margin-top: 1em; margin-bottom: 1em;">Remember that when you start a propcott, you set the terms for how others can take part. Try to make your propcott as simple as possible so people can understand and take action with ease.</p>
